# code-review-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
MagicMock/mock.effective_settings.history_db_path/: 126443939089488  127458725430432  138987042296256
MagicMock/mock.history_db_path/: 125639904939376  133894686143792  135842297654032
MagicMock/mock.model_copy().history_db_path/: 130461209889632  136030194861936
docs/: architecture.md  cli-guide.md  configuration.md  custom-agents.md  data-models.md  interactive-guide.md  setup-guide.md
examples/: vulnerable_app.py
interactive_tests/cli/: README.md  mock_github_server.py  mock_llm_server.py  run_all_tests.sh  run_phase2_tests.sh  run_phase3_tests.sh
interactive_tests/cli/samples/: deleted_file.patch  injection.patch  large_diff.patch  multi_file.patch  new_file.patch  renamed_file.patch  standard.patch
src/code_review_agent/: __init__.py  agent_definition.py  agent_loader.py  auto_fix.py  cancel_prompt.py  config.py  config_store.py  connection_test.py  context_enrichment.py  context_summary.py  dedup.py  diff_renderer.py  error_guidance.py  errors.py  github_client.py  guardrails.py  learning.py  linters.py  llm_client.py  main.py  models.py  orchestrator.py  progress.py  prompt_security.py  provider_registry.json  provider_registry.yaml  providers.py  rate_limiter.py  report.py  review_diff.py  security_scanner.py  storage.py  theme.py  token_budget.py  watch_incremental.py
src/code_review_agent/agents/: __init__.py  base.py  performance.py  security.py  style.py  test_coverage.py
src/code_review_agent/interactive/: __init__.py  background.py  bootstrap.py  completers.py  config_categories.py  fps_tracker.py  fuzzy_search.py  git_actions.py  git_ops.py  hooks.py  keybindings.py  middleware.py  permissions.py  plugins.py  repl.py  session.py  shutdown.py  slash_commands.py  startup_keys.py  tui_app.py
src/code_review_agent/interactive/commands/: __init__.py  _helpers.py  agent_browser.py  agent_selector.py  clean_cmd.py  config_cmd.py  config_edit.py  findings_cmd.py  git_read.py  git_write.py  graph_nav.py  history_cmd.py  keys_panel.py  meta.py  pr_read.py  pr_workflow.py  pr_write.py  provider_browser.py  provider_cmd.py  provider_selector.py  repo_cmd.py  review_cmd.py  usage_cmd.py  watch_cmd.py
src/code_review_agent/interactive/commands/findings/: __init__.py  actions.py  (+5 more)
src/code_review_agent/interactive/tabs/: __init__.py  config_tab.py  findings_tab.py  git_tab.py  more_tab.py  news_tab.py  pr_tab.py  repo_tab.py  usage_tab.py
src/code_review_agent/memory/: extractor.py  fact_store.py
src/code_review_agent/news/: background.py  commands.py  content.py  curator.py  dedupe.py  domains.py  fetcher.py  models.py  navigator.py  query.py  reader.py  scoring.py  storage.py  summarizer.py
src/code_review_agent/news/adapters/: rss.py
src/code_review_agent/news/sources/: __init__.py  hackernews.py  reddit.py  web.py
src/code_review_agent/skills/: loader.py
src/code_review_agent/utils/: memoize.py
tests/: conftest.py  test_agent_browser.py  test_agent_definition.py  test_agent_loader.py  test_agent_storage.py  test_agents.py  test_api_key_consistency.py  test_auto_fix.py  test_background_review.py  test_bootstrap.py  test_cancel_prompt.py  test_cli.py  test_config_observer.py  test_context_enrichment.py  test_dedup.py  test_diff_renderer.py  test_errors.py  test_findings_viewer.py  test_fps_tracker.py  test_fuzzy_search.py  test_git_actions.py  test_github_client.py  test_hooks.py  test_interactive.py  test_keybindings.py  test_learning.py  test_linters.py  test_llm_client.py  test_memoize.py  test_models.py  test_news_background.py  test_news_bugfixes.py  test_news_content.py  test_news_curator.py  test_news_dedupe.py  test_news_domains.py  test_news_hn_contract.py  test_news_missing_items.py  test_news_models.py  test_news_navigator.py  (+24 more)
